Don't use a heuristic when checking app install status on desktop.

On desktop, we can tell precisely whether an app is installed. Therefore, using
"has the app ever been installed?" as a heuristic is unnecessary and results in
false positives. By removing this heuristic, we now correctly send the
beforeinstallprompt event on pages whose app has been uninstalled.

Bug: 786186
Change-Id: I86482ad4a79f7707ffd35dcdb1f14a0fa7365e29