chrome/browser/banners/app_banner_manager_android.cc
@@ -144,18 +144,25 @@ std::string AppBannerManagerAndroid::GetBannerType() {
                                     : "play";
 }
 
-bool AppBannerManagerAndroid::IsWebAppInstalled(
-    content::BrowserContext* browser_context,
+bool AppBannerManagerAndroid::IsWebAppConsideredInstalled(
+    content::WebContents* web_contents,
+    const GURL& validated_url,
     const GURL& start_url,
     const GURL& manifest_url) {
-  // Returns true if a WebAPK is installed or is being installed.
-  // Does not check whether a non-WebAPK web app is installed: this is detected
-  // by the content settings check in AppBannerSettingsHelper::ShouldShowBanner
-  // (due to the lack of an API to detect what is and isn't on the Android
-  // homescreen). This method will still detect the presence of a WebAPK even if
-  // Chrome's data is cleared.
-  return ShortcutHelper::IsWebApkInstalled(browser_context, start_url,
-                                           manifest_url);
+  // Whether a WebAPK is installed or is being installed. IsWebApkInstalled
+  // will still detect the presence of a WebAPK even if Chrome's data is
+  // cleared.
+  bool is_webapk_installed = ShortcutHelper::IsWebApkInstalled(
+      web_contents->GetBrowserContext(), start_url, manifest_url);
+
+  // If a WebAPK is not installed, we use a heuristic to decide whether we
+  // consider a non-WebAPK to be installed (due to the lack of a pre-Oreo API
+  // to detect what is and isn't on the Android homescreen).
+  // TODO(crbug.com/786268): stop relying on this heuristic once WebAPKs are
+  // common vs legacy PWAs.
+  return is_webapk_installed ||
+         AppBannerSettingsHelper::HasBeenInstalled(web_contents, validated_url,
+                                                   GetAppIdentifier());
 }
 
 InstallableParams AppBannerManagerAndroid::ParamsToPerformInstallableCheck() {
